<resources>

    <string name="app_name">Science Workshop Survey</string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="Main_Page_Button" />
    <string name="string_main_page_button"> Next </string>
    <string name="todo">TODO</string>
    <string name="often">How often do you come?</string>
    <string name="students_current_grade">What grade are you in?</string>
    <string name="transportation">How did you arrive to the workshop?</string>
    <string name="tool_page_editT">What tools did you use?</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="Scssors">Scissors</string>
    <string name="Tape">Tape</string>
    <string name="Pen">Pen </string>
    <string name="Screw_Driver">Screw Driver</string>
    <string name="Enjoyment_level">On a scale from 0 to 5
        <br />how much  did you enjoy the project</string>
    <string name="Zero">0</string>
    <string name="status">Bad : 0</string>
    <string name="cam_finish">Take Picture</string>

</resources>