<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#889FE3"
    android:gravity="center">

    <TextView
        android:id="@+id/tool_page_question"
        android:layout_width="401dp"
        android:layout_height="112dp"
        android:layout_row="0"
        android:layout_column="8"
        android:layout_alignParentTop="true"
        android:layout_marginTop="148dp"
        android:elegantTextHeight="false"
        android:hint="@string/Enjoyment_level"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp"
        android:scrollHorizontally="false"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="116dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <CheckBox
            android:id="@+id/Scissors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:text="@string/Scssors" />

    </LinearLayout>





    <Button
        android:id="@+id/tool_page_button_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="9"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:background="#DADA34"
        android:text="@string/string_main_page_button"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/Pen"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_row="4"
        android:layout_column="9"
        android:text="@string/Pen" />

    <CheckBox
        android:id="@+id/Screw_Driver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="4"
        android:layout_column="9"


        android:layout_marginBottom="-82dp"
        android:text="@string/Screw_Driver" />

    <CheckBox
        android:id="@+id/Tape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-327dp"
        android:text="@string/Zero" />


</RelativeLayout>