<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#889FE3"
    android:gravity="center">

    <EditText
        android:id="@+id/tool_page_question"
        android:layout_width="304dp"
        android:layout_height="80dp"
        android:layout_row="0"
        android:layout_column="8"
        android:layout_alignParentTop="true"
        android:layout_marginTop="235dp"
        android:hint="@string/tool_page_editT"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="116dp" />

    <CheckBox
        android:id="@+id/Tape"
        android:layout_width="152dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="306dp"

        android:text="@string/Tape" />

    <CheckBox
        android:id="@+id/Screw_Driver"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="9"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="255dp"

        android:text="@string/Screw_Driver" />

    <CheckBox
        android:id="@+id/Scissors"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:layout_row="1"
        android:layout_column="8"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="253dp"

        android:text="@string/Scssors" />

    <CheckBox
        android:id="@+id/Pen"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_row="4"
        android:layout_column="9"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="306dp"
        
        android:text="@string/Pen" />

    <Button
        android:id="@+id/tool_page_button_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="9"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="92dp"
        android:background="#DADA34"
        android:text="@string/string_main_page_button"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />


</RelativeLayout>